version mobile fixied

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     background: rgb(230, 230, 235);
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 #logo{
     width: 100px;
@@ -22,14 +23,14 @@ header{
     height: 90px;
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: transparent;
     position: fixed;
-    background: #FAFAFA;
+    background: #FAFAFA ;
     z-index: 11111;
     border-bottom: 1px gray solid;
-
 }
-.menu ul{
+.menubar{
     display: flex;
     flex-wrap: wrap;
     position: absolute;
@@ -43,6 +44,32 @@ header{
 .pic-header img{
     display: block;
     width: 100%;
+}
+.langage-switcher{
+    position:absolute ;
+    right: 60px;
+    display: flex;
+    align-items: center;
+    top: 50px;
+    cursor: pointer;
+}
+.langugeHover{
+    background: #FAFAFA ;
+    display: none;
+    position: absolute;
+    top: 80%;
+    right:10px;
+    width: 150px;
+    height: 80px;
+    border: 1px solid gray;
+}
+#langue{
+    margin: 10px;
+    height: 20px;
+}
+.langage-switcher i{
+    font-size: 20px;
+    padding: 5px;
 }
 /*======== menu hovering ========*/
 .menu ul li i{
@@ -167,9 +194,11 @@ i{
     width: 100%;
     height: 500px;
     overflow-x: hidden;
+    position: relative;
 }
 .swiper02 {
     display: none;
+    position: relative;
   }
 .swiper-slide img{
     width: 100%;
@@ -261,6 +290,18 @@ h5{
     .menu ul{
         display: none;
     }
+    .lines{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        right: 0;
+    }
+    .line{
+        width: 30px;
+        margin: 3px;
+        height: 3px;
+        background: rgba(0, 0, 0, 0.623);
+    }
 }
 @media(max-width:1144px){
     .section01{
@@ -278,6 +319,31 @@ h5{
         height: 100%;
         overflow-x: hidden;
     }
+    .langage-switcher{
+        top: 30px;
+    }
+    [id*='hover']{
+        position: relative;
+    }
+    .menubar{
+        background: #FAFAFA;
+        width: 100%;
+        height: 100dvh;
+        position: relative;
+        top: 500px;
+        flex-direction: column;
+        transform: translateX(100%);
+        animation: moving 1s ease-in;
+    }
+    @keyframes moving {
+        from{
+            transform: translateX(100%);
+        }
+        to{
+            transform: translateX(o);
+        }
+        
+    }
 }
 @media(max-width:500px){
     .colum{
@@ -291,17 +357,15 @@ h5{
         width: 100%;
     }
     .ending-grid{
-        display: none;
+        display: inline-block;
     }
     .section03{
         width: 100%;
         margin: 0;
         padding: 0;
         display: inline-block;
-        background: yellow;
     }
     .section03-btns{
-        background: red;
         width: 100%;
         position: relative;
         left: 0;
